[mjimenezmolina] Implementacion servicios parametros